<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="CB_Standard" Id="{ba1361cf-e5f8-4871-b197-b5bbd8762a50}">
    <Declaration><![CDATA[TYPE CB_Standard :
///////////
// Structure For Bousquet. Main Operating Data to be saved ( ex: OPC )   
//////////
STRUCT
	//DI
	MesData				: CB ;  (* Object*)

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>